# modern_programming_technologies

./: README.md  test.pgm
.github/workflows/: ci.yml
01.IO_Flush/docs/: README.md
01.IO_Flush/src/: main.c
01.IO_Flush/tests/: build.bat  build.sh  run.bat  run.sh
02.Memory_Overcommit/docs/: README.md
02.Memory_Overcommit/src/: main.c
02.Memory_Overcommit/tests/: build.sh  run.bat
03.Github_Workflow/: README.md
04.Fractal/: CMakeLists.txt  README.md  fractal.c  fractal.h  main.c  test_main.c  txt.txt
04.Fractal/docs/: README.md
04.Fractal/res/: test.pgm
base proj/: .gitignore
